# opentelemetry-tide

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.tpl  build.rs
.cargo/: audit.toml  config.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: CI.yaml  audit.yaml  ci.yaml  dependabot-auto-merge.yml
examples/: .envrc.sample  README.md  front-server.rs  k6.js  plainserver.rs  server.rs  shared.rs
examples/servers/: front-server.rs  server.rs  shared.rs
src/: lib.rs
src/middlewares/: metrics.rs  mod.rs  tracing.rs
