[package]
name = "opentelemetry-tide"
version = "0.6.1"
authors = [
  "Christoph Grabo <asaaki@mannaz.cc>",
  "The opentelemetry-tide Contributors"
]
edition = "2018"
readme = "README.md"
description = "OpenTelemetry integration for Tide"
homepage = "https://github.com/asaaki/opentelemetry-tide"
repository = "https://github.com/asaaki/opentelemetry-tide"
categories = [
  "web-programming::http-server",
  "web-programming",
  "network-programming",
  "development-tools::debugging",
  "development-tools::profiling",
]
keywords = ["tide", "opentelemetry", "jaeger", "tracing", "instrumentation"]
license = "MIT OR Apache-2.0"
exclude = [".assets/*", ".github/*"]

[dependencies]
opentelemetry = "0.12"
opentelemetry-semantic-conventions = "0.4"
tide = "0.16"
url = "2.2"
http-types = "2.10"
kv-log-macro = "1.0"

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
opentelemetry = { version = "0.12", features = ["async-std"] }
opentelemetry-jaeger = { version = "0.11", features = ["async-std"] }
surf = "2.1"
