[package]
name = "opentelemetry-tide"
version = "0.12.0"
authors = [
  "Christoph Grabo <asaaki@mannaz.cc>",
  "The opentelemetry-tide Contributors"
]
edition = "2018"
readme = "README.md"
description = "OpenTelemetry integration for Tide"
homepage = "https://github.com/asaaki/opentelemetry-tide"
repository = "https://github.com/asaaki/opentelemetry-tide"
categories = [
  "web-programming::http-server",
  "web-programming",
  "network-programming",
  "development-tools::debugging",
  "development-tools::profiling",
]
keywords = ["tide", "opentelemetry", "jaeger", "tracing", "instrumentation"]
license = "MIT OR Apache-2.0"
exclude = [".assets/*", ".github/*", "README.tpl"]
# resolver = "2"

[lib]
path = "src/lib.rs"
doctest = false

[[example]]
name = "server"
path = "examples/servers/server.rs"

[[example]]
name = "front-server"
path = "examples/servers/front-server.rs"

[features]
default = ["trace", "metrics"]

trace = ["opentelemetry/trace"]
metrics = ["opentelemetry/metrics", "opentelemetry-prometheus", "prometheus"]

[dependencies]
opentelemetry = { version = "0.17.0", default-features = false }
opentelemetry-prometheus = { version = "0.10.0", optional = true }
opentelemetry-semantic-conventions = "0.9.0"
prometheus = { version = "0.13.1", optional = true }
tide = { version = "0.16.0", default-features = false }
url = "2.2.2"
http-types = { version = "2.12.0", default-features = false }
kv-log-macro = "1.0.7"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
opentelemetry = { version = "0.17.0", features = ["rt-async-std"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-async-std"] }
surf = "2.3.2"
tide = "0.16.0"
